--- a/index.html
+++ b/index.html
@@ -1,27 +1,160 @@
 <html>
 <head>
-<title>Lightech</title>
+	<title>Lightech</title>
 </head>
 <body>
-<h2>Compiling with DevMax</h2>
-<ol>
-<li>Go to the app local folder located at <code>%localappdata%\Packages\******.DevMax_****\LocalState</code> (You should open File Explorer, type in <code>%localappdata%\Packages\</code> and look for some folder with DevMax in the name.) and create 3 folders: <code>projects</code>, <code>include</code>, and <code>lib</code>.</li>
-<li>Obtain Windows' C/C++ headers: The easiest way is to install Visual Studio 2017 for Desktop Development. There are 2 set of headers:
-<ol type="i">
-<li>Windows SDK headers: Located in <code>C:\Program Files\Windows Kits\10\Include\$VERSION</code> where the current latest <code>$VERSION</code> is <code>10.0.14393.0</code>. There are 4 folders inside: <code>shared</code>, <code>ucrt</code>, <code>um</code>, and <code>winrt</code>. Usually we only need <code>ucrt</code> which provides those standard C headers i.e. <code>stdio.h</code> and the like but you should copy all of them to the <code>include</code> folder that you created in Step 1.</li>
-<li>Microsoft Visual C++ headers: Located in <code>$VISUAL_STUDIO_INSTALL_DIR\VC\Tools\MSVC\$VERSION\include</code> and the <code>$VERSION</code> is something like <code>14.10.24728</code>. Copy the content of this folder to something like <code>msvc</code> in the <code>include</code> folder that you created in Step 1. This provides you with those C++ headers like <code>iostream</code>.</li>
-</ol>
-<li>(OPTIONAL) Copy standard libraries for linking. Again, there are two sets of <code>*.lib</code> files to copy. The first are located in  <code>C:\Program Files\Windows Kits\10\Lib\$VERSION\{ucrt,um}\x86</code> and the second are in <code>$VISUAL_STUDIO_INSTALL_DIR\VC\Tools\MSVC\$VERSION\lib\x86</code>. Just a head-up: You only need <code>kernel32.lib</code>, </code>ucrt.lib</code>  in the former and </code>msvcrt.lib</code> and <code>vcruntime.lib</code> in the latter to produce console applications. Just copy them to the <code>lib</code> folder that you created.
-</li>
-<li>In <code>projects</code>: Create folder for each of your project, put your source code there and write build descriptions in <code>project.json</code>. Try cloning <a href="https://github.com/light-tech/DevMaxSamples.git">our repo</a> as a starting point.</li>
-<li>Now you should be able to build the <code>HelloWorld</code> application.</li>
-</ol>
-<h2>Question &amp; Answers</h2>
-<p><b>Q: Why don't you distribute the headers and libraries with the app?</b></p>
-<p><i>Answer</i>: Copyright issue, of course. We might distribute a non-Microsoft C/C++ standard library in future release.</p>
-<p><b>Q: If we have to install Visual Studio anyway, why should we use DevMax?</b></p>
-<p><i>Answer</i>: You only need to set it up once, 7-zipped the files (approximately 80MB) and you can use it anywhere. And you don't need to do it in your machine but a virtual machine; which avoid damaging your computer.</p>
-<p><b>Q: Can't you allow headers, libraries and project to be outside of the app's folder?</b></p>
-<p><i>Answer</i>: Due to severe security restrictions imposed by Microsoft, we must do it that way.</p>
+
+<h2>Welcome to Lightech</h2>
+
+<p>At Lightech, our working motto is:</p>
+  <q><strong>We despise inefficiency.</strong></q>
+
+<p>Ironically, as technology progresses and our chips 
+get faster and faster, the world becomes less and less 
+efficient. That is because there is now little incentive 
+for developers to optimize their code compared to the 
+situation at the infancy of computing. The most prominant 
+examples of this trend are</p>
+<ul>
+  <li><strong>Microsoft</strong>: Since the early 2000s, 
+the company made a strategic shift to C# to replace the 
+dominant programming language of choice C++. While C# does 
+offer advantages over C++, it suffers on performance and 
+the program size becomes significantly bigger. Visual Studio, 
+the integrated development environment (IDE) of choice 
+for Microsoft's Windows platform, is getting bigger and 
+bigger while adding little compared to versions released 
+years ago.
+  <p>Skype used to be a 20MB app. Now it was 100MB.</p>
+  </li>
+  <li><strong>Java</strong>: A huge percent of software is 
+written in Java. The "security", "portability", "easy to learn" 
+etc. of Java comes at the expense of, you guessed it, 
+efficiency. Java program requires availability of the 
+interpreter i.e. installation of additional software.
+  </li>
+  <li><strong>Facebook</strong>: Look at Facebook's Messenger 
+app for Universal Windows Platform. The app installs on a phone
+at 200MB and takes up a huge amount of RAM. (Facebook said 
+the minimum RAM requirement is 2GB. That is an extremely 
+unreasonable amount for a simplistic messaging application.)
+  </li>
+  <li><strong>The shift to applications using JavaScript</strong>:
+An example is Visual Studio Code.
+  </li>
+</ul>
+
+<p>We advocate ourselves to work toward an efficient world 
+of technology. The name <em>Lightech</em> is partially chosen
+to reflect both properties of light:
+its <strong>weightlessness</strong> (note: this is rhetoric,
+not true in physics) and <strong>fastest</strong> (note:
+again, this is rhetoric, we do not know if this is true
+in physics; it was assumed in Einstein theory though).
+The third and in fact original meaning is the dedication to
+innovation, as a light bulb usually used to illustrate new
+and novel ideas.</p>
+
+<p>This philosophy is reflected in every product we built.
+To illustrate our point:</p>
+<ul>
+  <li><strong>LawTeX</strong>: This is our very first product,
+TeX/LaTeX integrated writing environment. Not only does the
+app improves on the installation weight and speed, it also
+offers improvement in the traditional development workflow:
+Most LaTeX editor requires user to press the button to
+compile the document. LawTeX offers the ability to
+automatically recompile and re-render the generated DVI
+when you pause typing, saving the need to repeatedly press
+button to recompile the document.
+  (The same point can be said about any other IDE; though
+it makes less sense to do the same for programming languages
+like C/C++.)
+  This is in fact the very reasons we developed LawTeX.
+  </li>
+  <li><strong>OnlyTube</strong>: Our efficient YouTube client.
+OnlyTube prevent crashes of YouTube website on phones with
+little RAM like Lumia 635. It runs at roughly 50MB of RAM
+compared to 300-400MB watching the same video on browser.
+It also enhances user experience:
+  <ul>
+    <li>Comments are loaded as you scroll down the apps
+while you need to repeatedly press <em>Load more</em> on
+the browser (and then scroll down to see the newly loaded
+comments).
+    </li>
+    <li>Search results are likewise kept. On the browser,
+you need to open video in new tabs (and consuming a few
+hundred MB of RAM or so) and go back to search result page
+again and again if you want to see another search video. This
+is not possible on phone with limited RAM since opening the
+video in new tab will crash the search page.
+    </li>
+  </ul>
+  Beyond that, OnlyTube does not download video thumbnail
+images, saving a huge amount of RAM and data. Imagine loading
+100 search results with 100KB image each, you already consume
+10MB of data.
+  While we admit the official app (not available for Windows 10
+anyway) looks good, we like an efficient one more. Also, we
+are aware that data is probably not a concern in the US
+but not everywhere else; this is another point of inefficiency
+but due to users' choice instead of developers.
+  At 200KB download and 800KB installed, OnlyTube beats other
+YouTube options most of which weight at least 50MB installed,
+not to count the amount of temporary data they saves.
+  <li><strong>Git It</strong>: Our Git client. Once again,
+our application is roughly 3MB installed on a Lumia 635
+and 1MB on Desktop compared to 400MB full installation of
+the official Git client.
+  To our knowledge, this is the first Git client
+available for Windows 10 Mobile platform.<br/>
+  Git It fixes some design flaw of the official client such
+as putting the revision history right on the front page. In
+our experience, most people opened Git GUI also open the
+revision history; we thus save the users a lot of redundant
+mouse actions.<br/>
+  Git It has consideration and optimized for touchscreen
+interaction.<br/>
+  We do not claim Git It to be as powerful as the official
+client. However, we believe it is sufficient for a lot of
+use cases; such as researcher writing papers and short
+scripts (more generally, those who do not require features
+such as branching and submodules).
+  </li>
+  <li><strong>DevMax</strong>: Our C/C++ development platform
+(to write programs for Windows PC). Drawing from the
+inefficiency of most C/C++ IDE available, we improvise this
+tool with the goals:
+  <ul>
+    <li>Use as little space as possible: 800KB installed
+(without compiler, a separate C++ compiler app weight roughly
+30MB) compared to at least 1GB basic installation (solution
+loading + editor only) of Visual Studio Community
+or 300MB installation of the supposedly much more lightweight
+Visual Studio Code.
+    </li>
+    <li>Efficient and fast: Written in C++ instead of
+Java, C# or JavaScript.
+    </li>
+    <li>Better compiler workflow: Visual Studio runs (lots of)
+external processes to compile. Our C++ compiler is integrated.
+This means there is no need to reload, reinitialize,
+reprocesses (system headers), etc. Our hello world application
+compilation is at least 10 times faster than Visual Studio.
+    </li>
+  </ul>
+  DevMax is in fact used to develop itself (and from now on,
+all of our other apps)!
+  </li>
+  <li><strong>ReWeB</strong>: Our web browser. ReWeB removes
+images and scripts; making sites unviewable on phones with
+little RAM (constant site crashing and reloading) accessible
+to those phones. As a consequence, ReWeB saves precious data.
+ReWeB also do not cache website to save disk space storage.
+A typical Chrome installation consumes 400MB-2GB for the
+browser and cached contents.
+  </li>
+</ul>
 </body>
 </html>
