Remove redundant Home from navigation

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
         <a class="pure-menu-heading" href="">Lightech</a>
 
         <ul class="pure-menu-list">
-            <li class="pure-menu-item pure-menu-selected"><a href="#" class="pure-menu-link">Home</a></li>
             <li class="pure-menu-item"><a href="about.html" class="pure-menu-link">About</a></li>
             <li class="pure-menu-item"><a href="devmax.html" class="pure-menu-link">DevMax</a></li>
             <!--<li class="pure-menu-item"><a href="#" class="pure-menu-link">Sign Up</a></li>-->
@@ -27,9 +26,9 @@
 <div class="splash-container">
     <div class="splash">
         <h1 class="splash-head">A Place for Those Who Despise Inefficiency</h1>
-        <!--<p class="splash-subhead">
-            our working motto.
-        </p>-->
+        <p class="splash-subhead">
+            Like us.
+        </p>
         <!--<p>
             <a href="http://purecss.io" class="pure-button pure-button-primary">Get Started</a>
         </p>-->
@@ -66,7 +65,7 @@
                     <a href="https://www.microsoft.com/en-us/store/p/git-it/9nblggh4s2bx">Git It</a>
                 </h3>
                 <p>
-                    Our Git client for Windows PCs and phones. Take your hard work everywhere you go.
+                    Our Git client for Windows PCs and phones to take your hard work everywhere you go.
                 </p>
             </div>
             <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-5">
