--- a/devmax.html
+++ b/devmax.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A layout example that shows off a responsive product landing page.">
-    <title>DevMax</title>
+    <title>DevMax Guide</title>
     <link rel="stylesheet" href="css/pure-min.css" integrity="sha384-" crossorigin="anonymous">
     <link rel="stylesheet" href="css/grids-responsive-min.css">
     <!--<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">-->
@@ -16,10 +16,8 @@
         <a class="pure-menu-heading" href="index.html">Lightech</a>
 
         <ul class="pure-menu-list">
-            <li class="pure-menu-item"><a href="index.html" class="pure-menu-link">Home</a></li>
             <li class="pure-menu-item"><a href="about.html" class="pure-menu-link">About</a></li>
             <li class="pure-menu-item pure-menu-selected"><a href="devmax.html" class="pure-menu-link">DevMax</a></li>
-            <!--<li class="pure-menu-item"><a href="#" class="pure-menu-link">Sign Up</a></li>-->
         </ul>
     </div>
 </div>
