Add source for LawTeX usage guide

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
 <div class="splash-container">
     <div class="splash">
-        <h1 class="splash-head">A Place for Those Who Despise Inefficiency</h1>
+        <h1 class="splash-head">The Evolution Is Now</h1>
         <p class="splash-subhead">
-            Like us.
+            A Place for Those Who Despise Inefficiency Like us.
         </p>
         <!--<p>
             <a href="http://purecss.io" class="pure-button pure-button-primary">Get Started</a>
@@ -74,7 +74,7 @@
                     <a href="https://www.microsoft.com/en-us/store/p/onlytube/9nsqdspxqfm9">OnlyTube</a>
                 </h3>
                 <p>
-                    Efficient way to watch YouTube.
+                    The most Efficient way to watch YouTube.
                 </p>
             </div>
             <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-5">
@@ -83,7 +83,7 @@
                     <a href="https://www.microsoft.com/en-us/store/p/reweb/9nblggh5lpkj">ReWeB</a>
                 </h3>
                 <p>
-                    Browse the web freely.
+                    Browse the web freely: ad-free, image-free, script-free.
                 </p>
             </div>
         </div>
