Add link to YouTube video and put the demo video on top to catch first attention and impression

--- a/devmax.html
+++ b/devmax.html
@@ -38,7 +38,10 @@
     <div class="content">
 
         <h1 class="content-head is-center">DevMax</h1>
-        
+
+        <iframe width="640" height="360" src="https://www.youtube.com/embed/rOm5A1JFBv8" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+
+        <aside>
         <p>Due to our oversight of not taking into account the fact
 that LLVM uses some Win32 API unsupported in the Windows Store
 so that our app cannot pass the certification process, we have
@@ -49,6 +52,7 @@ promised.</p>
 that this works better in our favor because with the current 2-app
 approach, the IDE app DevMax do not crash if the C++ compiler
 app crashes.</p>
+        </aside>
 
   <h2>Compiling C/C++ with DevMax</h2>
 
@@ -145,8 +149,9 @@ source code directly. You can try our
 <a href="https://github.com/light-tech/DevMaxInterpreter">interpreter samples</a>
 by cloning it into <code>C++Projects</code>. Most of the interpreter
 examples does not require any extra step of setting up headers and
-library as in case of compilation. Watch it in action
-(<a href="trailer.mp4">Download link [.mp4, 3MB]</a>): <video src="Trailer.mp4" /></p>
+library as in case of compilation. Watch it in action on
+<a href="https://www.youtube.com/watch?v=rOm5A1JFBv8">YouTube</a>
+or <a href="trailer.mp4">download the video directly [.mp4, 3MB]</a>.
 
   <h2>Question &amp; Answers</h2>
   <p><b>Q: Why don't you distribute the headers and
@@ -165,7 +170,9 @@ why should we use DevMax?</b></p>
   <p><i>Answer</i>: You only need to set it up once,
 7-zipped the files (approximately 80MB) and you can use
 it anywhere. And you don't need to do it in your machine
-but a virtual machine; which avoid damaging your computer.
+but a virtual machine; which avoid damaging your day-to-day computer.
+Better yet, if you have a <b>good</b> friend who has Visual Studio
+installed, you can ask them for the headers.
   </p>
   <p><b>Q: Can't you allow headers, libraries and project
 to be outside of the aforementioned folders?</b></p>
